adiciona a estrutua básica do servidor A e posiciona handleClient na classe